[gd_scene load_steps=3 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://download.jpg" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 101.0
margin_top = 305.0
margin_right = 792.0
margin_bottom = 397.0
color = Color( 0.2, 0.184314, 0.184314, 1 )

[node name="Label" type="Label" parent="ColorRect3"]
margin_left = 22.0
margin_top = 12.0
margin_right = 675.0
margin_bottom = 82.0
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 100.0
margin_top = 48.0
margin_right = 788.0
margin_bottom = 127.0
color = Color( 0.164706, 0.14902, 0.14902, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="ColorRect"]
margin_right = 690.0
margin_bottom = 78.0
text = "Clique no 1° botão para visualizar lista"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 826.0
margin_top = 34.0
margin_right = 982.0
margin_bottom = 136.0
text = "botão 1"

[node name="Button2" type="Button" parent="."]
margin_left = 824.0
margin_top = 171.0
margin_right = 985.0
margin_bottom = 276.0
text = "botão 2"

[node name="Button3" type="Button" parent="."]
margin_left = 827.0
margin_top = 302.0
margin_right = 985.0
margin_bottom = 402.0
text = "botão 3"

[node name="Button4" type="Button" parent="."]
margin_left = 828.0
margin_top = 431.0
margin_right = 981.0
margin_bottom = 529.0
text = "botão 4"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 102.0
margin_top = 179.0
margin_right = 455.0
margin_bottom = 260.0
text = " "
__meta__ = {
"_edit_group_": true
}

[node name="Download" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 512, 301 )
scale = Vector2( 3.41333, 3.54167 )
texture = ExtResource( 2 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 477.0
margin_top = 178.0
margin_right = 792.0
margin_bottom = 260.0
color = Color( 0.207843, 0.180392, 0.180392, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="ColorRect2"]
anchor_left = -0.655
anchor_top = -3.583
anchor_right = -0.655
anchor_bottom = -3.583
margin_left = 209.325
margin_top = 298.806
margin_right = 518.325
margin_bottom = 370.806
align = 1
valign = 1
autowrap = true

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 101.0
margin_top = 434.0
margin_right = 456.0
margin_bottom = 520.0

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 483.0
margin_top = 433.0
margin_right = 801.0
margin_bottom = 518.0
color = Color( 0.180392, 0.156863, 0.156863, 1 )

[node name="Label" type="Label" parent="ColorRect4"]
margin_left = 2.0
margin_top = 7.0
margin_right = 314.0
margin_bottom = 84.0
align = 1
valign = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
